--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>HOME</title>
-    <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>HOME</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-   <header>
-    <h1>BORANG PEMILIHAN SUKAN</h1>
-    <nav>
-        <ul>
-            <li><a href="#" class="active">HOME</a></li>
-            <li><a href="form.html">FORM</a></li>
+  <header class="bg-primary text-white py-3">
+    <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between">
+      <h1 class="h3 mb-2 mb-md-0">BORANG PEMILIHAN SUKAN</h1>
+      <nav>
+        <ul class="nav">
+          <li class="nav-item">
+            <a href="#" class="nav-link active text-white">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a href="form.html" class="nav-link text-white">FORM</a>
+          </li>
         </ul>
-    </nav>
-   </header>
+      </nav>
+    </div>
+  </header>
 
-    <main>
-        <section>
-            <img src="gambar/logojtm.jpg" alt="Source Code Management Illustration" />
-        </section>
-    </main>
+  <main class="container my-5 text-center">
+    <section>
+      <img src="gambar/logojtm.jpg" alt="Logo JTM" class="img-fluid" style="max-height: 300px;" />
+    </section>
+  </main>
 
-    <footer><p>&copy; 2025 Laman Utama</p></footer>
+  <footer class="bg-dark text-white text-center py-3">
+    <p class="mb-0">&copy; 2025 Laman Utama</p>
+  </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
